--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,16 @@ services:
             XDEBUG_MODE: '${SAIL_XDEBUG_MODE:-off}'
             XDEBUG_CONFIG: '${SAIL_XDEBUG_CONFIG:-client_host=host.docker.internal}'
             IGNITION_LOCAL_SITES_PATH: '${PWD}'
+            REDIS_HOST: redis
+            REDIS_PORT: 6379
+            REDIS_PASSWORD: 'null'
         volumes:
             - '.:/var/www/html'
         networks:
             - sail
         depends_on:
             - pgsql
+            - redis
     pgsql:
         image: 'postgres:17'
         ports:
@@ -48,9 +52,27 @@ services:
                 - '${DB_USERNAME}'
             retries: 3
             timeout: 5s
+        restart: unless-stopped
+
+    redis:
+        image: 'redis:alpine'
+        ports:
+            - '${FORWARD_REDIS_PORT:-6379}:6379'
+        volumes:
+            - 'sail-redis:/data'
+        networks:
+            - sail
+        healthcheck:
+            test: ["CMD", "redis-cli", "ping"]
+            retries: 3
+            timeout: 5s
+        restart: unless-stopped
+
 networks:
     sail:
         driver: bridge
 volumes:
     sail-pgsql:
+        driver: local
+    sail-redis: # <-- Define the volume for Redis data
         driver: local
